# KUP_ASSIGN

./: .gitignore
Assignments/api_task/: Cargo.toml
Assignments/api_task/src/: main.rs  test.rs
Assignments/assignment10/: Cargo.toml
Assignments/assignment10/src/: lib.rs  test.rs
Assignments/assignment11/: Cargo.toml
Assignments/assignment11/src/: lib.rs  test.rs
Assignments/assignment12/: Cargo.toml
Assignments/assignment12/src/: lib.rs  test.rs
Assignments/assignment_7/: Cargo.toml
Assignments/assignment_7/src/: lib.rs  test.rs
Assignments/assignment_8/src/: iterator.rs  lib.rs  test.rs
Assignments/assignment_9/: Cargo.toml
Assignments/assignment_9/src/: lib.rs  test.rs
Assignments/google_endpoints/: Cargo.toml
Assignments/google_endpoints/src/: end.rs  lib.rs  test.rs
Assignments/json_array/: Cargo.toml
Assignments/json_resp/: Cargo.toml
Assignments/json_respo/: Cargo.toml
Assignments/json_response1/: Cargo.toml
Assignments/json_response1/src/: main.rs
Assignments/testing_endpoints/: Cargo.toml
Assignments/user_task/: Cargo.toml
Assignments/user_task2/: Cargo.toml
loggers/binary_search/: Cargo.toml
loggers/duplicate/: Cargo.toml
loggers/enum_5/: Cargo.toml
loggers/fibonnaci/: Cargo.toml
loggers/hello_world/: Cargo.toml
loggers/leap_year/: Cargo.toml
loggers/linear_search/: Cargo.toml
loggers/merge_sort/: Cargo.toml
loggers/operation/: Cargo.toml
loggers/pallindrome_3/: Cargo.toml
loggers/patter_match/: Cargo.toml
loggers/rotated/: Cargo.toml
loggers/student_struct/: Cargo.toml
(+48 files in other folders)
